# SystemThemePP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/glfw_example/: main.cpp
examples/terminal/: main.cpp
include/system_theme_pp/: core.hpp  system_theme.hpp  types.hpp
lib/gnome-css/: CMakeLists.txt  Cargo.toml
lib/gnome-css/c_src/: gnome_css.c
lib/gnome-css/include/gnome_css/: gnome_css.h
lib/gnome-css/src/: color_utils.rs  lib.rs
src/linux/: gnome_theme.cpp  gnome_theme.hpp  system_theme.cpp
src/linux/dbus_theme/: blocking_deque.hpp  dbus_handler.cpp  dbus_handler.hpp  dbus_theme.cpp  dbus_theme.hpp
src/linux/gnome/: gnome_shared.cpp  gnome_shared.hpp  gnome_theme.cpp  gnome_theme.hpp  gtk3_theme.cpp  gtk3_theme.hpp  gtk4_theme.cpp  gtk4_theme.hpp  gtk_shared.cpp  gtk_shared.hpp  gtk_theme_interface.hpp  gtk_types.hpp
src/linux/linux_theme_interface/: linux_theme_interface.hpp
src/shared/: system_theme.cpp
src/windows/: system_theme.cpp
